# CoreSpecViewer

./: .gitignore  CITATION.cff  CoreSpecViewer.py  HolePage.py  LICENSE  README.md  README_batch_cluster.md  TODO.md  batch_cluster.py  config.py  context.py  environment.yml  fledgling_downhole_logic.py  multi_box.py  objects.py  pages.py  pyproject.toml  ribbon.py  ribbon_window.py  run_batch_cluster.bat  spectral_functions.py  test.py  tool_dispatcher.py  tools.py  util_windows.py
app/: __init__.py  config.py  main.py
app/create_report/: pdf_booklet.py  report_dialogue.py
app/interface/: __init__.py  profile_tools.py  tool_dispatcher.py  tools.py
app/models/: __init__.py  context.py  dataset.py  hole_object.py  lib_manager.py  processed_object.py  raw_object.py
app/spectral/: spectral_functions.py
app/spectral_ops/: IO.py  analysis.py  band_maths.py  downhole_resampling.py  downhole_resampling_v2.py  export_ops.py  fenix_smile.py  masking.py  processing.py  remap_legend.py  spectral_functions.py  visualisation.py
app/ui/: __init__.py  band_math_dialogue.py  base_page.py  box_ops.py  catalogue_window.py  cluster_window.py  dhole_view.py  display_canvases.py  display_text.py  hole_actions.py  hole_page.py  interrogate_feature.py  lib_page.py  load_dialogue.py  mask_actions.py  multi_box.py  raw_actions.py  raw_page.py  ribbon.py  util_windows.py  vis_actions.py  vis_page.py
resources/: clean_legend_mapping.json  clean_legend_mapping2.json
test_data/Processed_Object/: synthetic_test_bands.npy  (+4 more)
tests/: integration_test.py  test_config_integration.py
