[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "corespecviewer"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "numpy==1.24.3",
    "scipy==1.11.3",
    "numba==0.58.0",
    "llvmlite==0.41.1",
    "matplotlib==3.8.0",
    "PyQt5==5.15.10",
    "Pillow==10.0.1",
    "opencv-python==4.6.0.66",
    "spectral==0.23.1",
    "hylite==1.36",
    "gfit==0.2"
]

[project.scripts]
corespecviewer = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]